examples/bad/gc_removed_package/main.mko
// Must fail: the legacy GC manifest setting is rejected.
fn main() {
    print("unreachable")
}
